CostalCloud/force-app/main/default/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>Split_Reduced_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split/Reduced Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Springline_Fraction__c</fullName>
        <label>Springline Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Springline_Inches__c</fullName>
        <inlineHelpText>Whole Inches Only</inlineHelpText>
        <label>Springline Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tall_Cabs__c</fullName>
        <label>Tall Cabs #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Needed__c</fullName>
        <label>Template Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tilt_Control_Position__c</fullName>
        <label>Tilt Control Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Change_Order_Amount__c</fullName>
        <formula>Amount_Each__c  *   Quantity_Custom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Change Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transom_Height_Fraction__c</fullName>
        <label>Transom Height Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transom_Height_Inches__c</fullName>
        <inlineHelpText>Whole Inches Only</inlineHelpText>
        <label>Transom Height Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transom_Width_Fraction__c</fullName>
        <label>Transom Width Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transom_Width_Inches__c</fullName>
        <inlineHelpText>Whole inches only</inlineHelpText>
        <label>Transom Width Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transom__c</fullName>
        <label>Transom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Regular Cabs #</fullName>
                </value>
                <value>
                    <fullName>Tall Cabs #</fullName>
                </value>
                <value>
                    <fullName>Panels #</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Location_for_C_O__c</fullName>
        <label>Unit Location for C/O</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>LF</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usable_Doors_Sealed__c</fullName>
        <label>Usable Doors Sealed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_Containment__c</fullName>
        <label>Vertical Containment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_Stacking__c</fullName>
        <label>Vertical Stacking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walkthrough_with_customer_completed__c</fullName>
        <label>Walkthrough with customer completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_Signs__c</fullName>
        <label>Warning Signs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_paperwork_given_to_customer__c</fullName>
        <label>Warranty paperwork given to customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_all_labor_for_install_completed__c</fullName>
        <label>Was all labor for install completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_install_busted_due_to_product_issues__c</fullName>
        <label>Was install busted due to product issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waste_Contained__c</fullName>
        <label>Waste Contained</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_there_any_issues_with_install__c</fullName>
        <label>Were there any issues with install?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wet_Wipes_Used__c</fullName>
        <label>Wet Wipes Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_Floor__c</fullName>
        <label>What Floor?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Is_the_existing_slab_thickness__c</fullName>
        <label>What is the existing slab thickness?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-3/8&quot;</fullName>
                </value>
                <value>
                    <fullName>1-3/4&quot;</fullName>
                </value>
                <value>
                    <fullName>2&quot;</fullName>
                </value>
                <value>
                    <fullName>Other Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_Measurement__c</fullName>
        <label>What Measurement?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_direction_does_the_door_face__c</fullName>
        <label>What direction does the door face?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_floor_is_the_unit_located_on__c</fullName>
        <label>What floor is the unit located on?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basement</fullName>
                </value>
                <value>
                    <fullName>Ground Floor</fullName>
                </value>
                <value>
                    <fullName>2nd Floor</fullName>
                </value>
                <value>
                    <fullName>3rd Floor</fullName>
                </value>
                <value>
                    <fullName>4th Floor</fullName>
                </value>
                <value>
                    <fullName>Other&gt;Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_existing_Lock_Prep__c</fullName>
        <label>What is the existing Lock Prep?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Triple</fullName>
                </value>
                <value>
                    <fullName>Triple-Half</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_existing_condition_of_unit__c</fullName>
        <label>What is the existing condition of unit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_existing_jamb_depth__c</fullName>
        <label>What is the existing jamb depth?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4-9/16&quot;</fullName>
                </value>
                <value>
                    <fullName>5-1/4&quot;</fullName>
                </value>
                <value>
                    <fullName>6-9/16&quot;</fullName>
                </value>
                <value>
                    <fullName>Other Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_existing_type__c</fullName>
        <label>What is the existing type?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>Fiberglass</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Vinyl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_existing_unit_type_interior__c</fullName>
        <label>What is the existing unit type interior?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing Existing</fullName>
                </value>
                <value>
                    <fullName>Prehung</fullName>
                </value>
                <value>
                    <fullName>Bi-Fold</fullName>
                </value>
                <value>
                    <fullName>Bi-Pass</fullName>
                </value>
                <value>
                    <fullName>Barn</fullName>
                </value>
                <value>
                    <fullName>Pocket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_swing_of_existing_door__c</fullName>
        <label>What is the swing of existing door?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Swing</fullName>
                </value>
                <value>
                    <fullName>Out-Swing</fullName>
                </value>
                <value>
                    <fullName>Sliding</fullName>
                </value>
                <value>
                    <fullName>Folding</fullName>
                </value>
                <value>
                    <fullName>Bi-Fold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_measurement_are_you_providing__c</fullName>
        <label>What measurement are you providing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Unit Size</fullName>
                </value>
                <value>
                    <fullName>Recommended Unit Size</fullName>
                </value>
                <value>
                    <fullName>Rough Opening</fullName>
                </value>
                <value>
                    <fullName>Sheetrock Opening</fullName>
                </value>
                <value>
                    <fullName>Cased Opening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_type_are_you_measuring_for__c</fullName>
        <label>What type are you measuring for?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>What_type_of_measure_is_this__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prehung Unit</fullName>
                </value>
                <value>
                    <fullName>Sliding</fullName>
                </value>
                <value>
                    <fullName>Slab Only</fullName>
                </value>
                <value>
                    <fullName>Iron Door</fullName>
                </value>
                <value>
                    <fullName>Folding Door</fullName>
                </value>
                <value>
                    <fullName>Barn Door</fullName>
                </value>
                <value>
                    <fullName>Bi-Fold Door</fullName>
                </value>
                <value>
                    <fullName>Bi-Pass Door</fullName>
                </value>
                <value>
                    <fullName>Pocket Door</fullName>
                </value>
                <value>
                    <fullName>Murphy Door</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_type_of_measure_is_this__c</fullName>
        <label>What type of measure is this?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exterior</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Storm/Security/Screen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_was_it_noticed__c</fullName>
        <label>Where was it noticed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_has_been_made_aware_at_the_store__c</fullName>
        <label>Who has been made aware at the store?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_the_vendor__c</fullName>
        <label>Who is the vendor?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_the_vendor_for_the_product__c</fullName>
        <label>Who is the vendor for the product?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson</fullName>
                </value>
                <value>
                    <fullName>Ashworth</fullName>
                </value>
                <value>
                    <fullName>Emco</fullName>
                </value>
                <value>
                    <fullName>Feather River</fullName>
                </value>
                <value>
                    <fullName>Grisham</fullName>
                </value>
                <value>
                    <fullName>JELD-WEN</fullName>
                </value>
                <value>
                    <fullName>Main Door</fullName>
                </value>
                <value>
                    <fullName>Masonite</fullName>
                </value>
                <value>
                    <fullName>Steves &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>Therma-Tru</fullName>
                </value>
                <value>
                    <fullName>Unique Home Design</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_was_made_aware__c</fullName>
        <label>Who was made aware?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width_Fraction__c</fullName>
        <label>Width: Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Width_Inches__c</fullName>
        <inlineHelpText>Whole Inches Only</inlineHelpText>
        <label>Width: Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Will_product_indicated_on_measure_work__c</fullName>
        <label>Will product indicated on measure work?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Product on Measure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_stock_product_work_or_is_SO_needed__c</fullName>
        <label>Will stock  product work or is SO needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Special Order</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_the_Submitted_Design_Work__c</fullName>
        <label>Will the Submitted Design Work?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Windows_Closed_E__c</fullName>
        <label>Windows Closed (E)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Windows_Closed_I__c</fullName>
        <label>Windows Closed (I)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>With_Nail_Fins__c</fullName>
        <label>With Nail Fins?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Area_Contained__c</fullName>
        <label>Work Area Contained</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Dry_Wipes_Used__c</fullName>
        <label># of Dry Wipes Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Wet_Wipes_Used__c</fullName>
        <label># of Wet Wipes Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_operating_panels_on_existing_door__c</fullName>
        <label># of operating panels on existing door</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Change_Order</fullName>
        <active>true</active>
        <label>Change Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>DDR</fullName>
        <active>true</active>
        <label>DDR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Doors_Windows</fullName>
        <active>true</active>
        <label>Installation Doors/Windows</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Kitchens</fullName>
        <active>true</active>
        <label>Installation Kitchens</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Window_Treatments</fullName>
        <active>true</active>
        <label>Installation Window Treatments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Kitchens_Site_Verification_Bid</fullName>
        <active>true</active>
        <label>Kitchens Site Verification/Bid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measure_Doors</fullName>
        <active>true</active>
        <label>Measure Doors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measure_Site_Analysis_Kitchens</fullName>
        <active>true</active>
        <label>Measure Site Analysis Kitchens</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measure_Window_Treatments</fullName>
        <active>true</active>
        <label>Measure Window Treatments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Measure_Windows</fullName>
        <active>true</active>
        <label>Measure Windows</label>
    </recordTypes>
    <recordTypes>
        <fullName>Missing_or_Uninstallable_Products</fullName>
        <active>true</active>
        <label>Missing or Uninstallable Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_WOLI</fullName>
        <active>true</active>
        <label>TCS WOLI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Window_Treatments_Labor</fullName>
        <active>true</active>
        <label>Window Treatments Labor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Windows_Labor</fullName>
        <active>true</active>
        <label>Windows Labor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>