CostalCloud/force-app/main/default/objects/WorkOrderLineItem/fields/Bore_1_Backset_Depth__c.field-meta.xml
<CustomField>
    <fullName>Bore_1_Backset_Depth__c</fullName>
    <label>Bore 1 Backset Depth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-3/8&quot;</fullName>
            </value>
            <value>
                <fullName>2-3/4&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>