CostalCloud/force-app/main/default/objects/WorkOrderLineItem/fields/Bore_1_Location__c.field-meta.xml
<CustomField>
    <fullName>Bore_1_Location__c</fullName>
    <label>Bore 1 Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>