CostalCloud/force-app/main/default/objects/WorkOrderLineItem/fields/Bore_1_Location_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Bore_1_Location_Fraction__c</fullName>
    <label>Bore 1 Location Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>