CostalCloud/force-app/main/default/objects/WorkOrderLineItem/fields/Bore_2_Location__c.field-meta.xml
<CustomField>
    <fullName>Bore_2_Location__c</fullName>
    <label>Bore 2 Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>